--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ data.orders.forEach((order) => {
 	document.getElementById("heart1")?.addEventListener("click", toggleHeart);
 </script>
 
-<Layout title="Astro Ecommerce">
+<Layout title="Threadzip">
 	<main>
 		<Navbar />
 		<div class="container mt-5">
