--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<link rel="canonical" href="https://www.creative-tim.com/astro/" />
+		<link rel="canonical" href="https://www.threadzip.com/" />
 	
 	</head>
 	<body>
