import  css on other pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ data.orders.forEach((order) => {
 								thumb_src={product.thumb_src}
 								thumb_alt={product.thumb_alt}
 								color={product.color}
-								colors={product.colors}
+								colors={product.colors as any}
 								title={product.title}
 								description={product.description}
 								price={product.price}
