--- a/src/pages/product.astro
+++ b/src/pages/product.astro
@@ -1,4 +1,5 @@
 ---
+import "../../assets/scss/astro-ecommerce.scss";
 
 import data from "../../public/data.json";
 import Navbar from "../components/navbar";
