--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,8 @@ const { title } = Astro.props;
 			rel="stylesheet"
 		/>
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+    <base href="/"/>
+    <title>{title}</title>
 		<link rel="canonical" href="https://www.threadzip.com/" />
 	
 	</head>
