--- a/src/pages/product.astro
+++ b/src/pages/product.astro
@@ -15,7 +15,7 @@ let productReviews = data.reviews.filter((x) => x.productID == "01");
 let firstProduct = data.products.pop();
 ---
 
-<Layout title="Product Page" client:only>
+<Layout title="Product Page" >
 	<main>
 		<Navbar />
 		<div class="container mt-5">
