--- a/assets/scss/astro-ecommerce/cards/card-product.scss
+++ b/assets/scss/astro-ecommerce/cards/card-product.scss
@@ -4,6 +4,16 @@
       object-fit: cover;
     }
   }
+  
+  & a {
+    .h-15 {
+      height: 15rem;
+    }
+  }
+  
+  .ch-8 {
+    height: 8rem;
+  }
 
   .badge {
     border: 1px solid $light;
