--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,13 @@
 ---
-const { title } = Astro.props;
+import BaseHead from './BaseHead.astro';
+
+const { title, description, author } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
-		<link
-			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Noto+Sans:300,400,500,600,700,800|PT+Mono:300,400,500,600,700"
-			rel="stylesheet"
-		/>
-		<meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-		<link rel="canonical" href="https://www.threadzip.com/" />
-	
-	</head>
+      <BaseHead title={title} description={description} author={author} />
 	<body>
 		<slot />
 	</body>
