created 2 pages and remove few components from landing page

--- a/assets/scss/astro-ecommerce.scss
+++ b/assets/scss/astro-ecommerce.scss
@@ -28,3 +28,26 @@
 
 // Custom Variables
 @import "astro-ecommerce/custom/styles";
+
+.hamburger-button {
+  background-color: #333;
+  color: white;
+  padding: 15px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.nav-links {
+  display: none;
+  background-color: #333;
+  color: white;
+}
+.nav-links a {
+  display: block;
+  padding: 15px;
+  color: white;
+  text-decoration: none;
+}
+.nav-links a:hover {
+  background-color: #111;
+}
