--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -24,7 +24,7 @@ const socialImageURL = new URL("/logo/threadzip-logo-white.png", Astro.url).href
 {/* Primary Meta Tags */}
 <meta name="title" content={siteTitle} />
 <meta name="description" content={description} />
-<meta name="author" content={'Recusrive Zero'} />
+<meta name="author" content={author} />
 
 {/* Theme Colour */}
 <meta name="theme-color" content="" />
